# dev-easysearch-web

./: .gitignore  Procfile  README.md  app.json  app.py  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  vercel.json  vitest.config.js  webpack.config.js
docs/: DEVELOPMENT.md
static/: init-url.json  manifest.json  style.css
static/src/: apifetch.js  db.js  dom.js  script.js  sw.js  tools.js
templates/: index.html
test/backend/: conftest.py  test_app.py  test_get.py  test_post.py
test/frontend/: apifetch.test.js  tool.test.js
utils/check_result/: check_get.py  check_post.py  check_result_info.py  result_info.py
utils/langs/: mecab_utls.py
utils/langs/tools/: jp_tools.py
