[project]
name = "easy-search-web"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "ipadic>=1.0.0",
    "isort>=7.0.0",
    "mecab-python3>=1.0.10",
    "mypy>=1.18.2",
    "requests>=2.32.5",
    "types-requests>=2.32.4.20250913",
]
