[project]
name = "easy-search-web"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "hypercorn>=0.18.0",
    "ipadic>=1.0.0",
    "isort>=7.0.0",
    "mecab-python3>=1.0.10",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "quart>=0.20.0",
    "requests>=2.32.5",
    "types-requests>=2.32.4.20250913",
]
[tool.pytest.ini_options]
asyncio_mode = "auto"
